Fixed pending reviews text overflow

--- a/client/src/components/Account/PendingReviews.css
+++ b/client/src/components/Account/PendingReviews.css
@@ -44,18 +44,22 @@
   height: 100px;
 }
 
-#buyer-review-product-name {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+#buyer-review-product-details {
+  display: block;
+  /* flex-direction: column;
+  align-items: flex-start; */
 }
 
-/* #buyer-review-product-name div {
+/* #buyer-review-product-details div {
   min-width: 400px;
   /* background-color: red; */
 
-#buyer-review-product-name h6 {
-  width: 400px;
+/* #buyer-review-product-details h6 {
+  width: 100%;
+} */
+
+#buyer-review-product-details h6 {
+  width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -73,14 +77,14 @@
   border-radius: 5px;
 }
 
-@media screen and (max-width: 1140px) {
-  #buyer-review-product-name h6 {
-    /* width: 5; */
+/* @media screen and (max-width: 1140px) {
+  #buyer-review-product-details h6 {
+
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
   }
-}
+} */
 
 @media screen and (max-width: 960px) {
   .pending-reviews-wrapper {
@@ -97,19 +101,19 @@
 }
 
 @media screen and (max-width: 770px) {
-  #buyer-review-product-name h6 {
+  #buyer-review-product-details h6 {
     width: 300px;
   }
 }
 
 @media screen and (max-width: 540px) {
-  #buyer-review-product-name h6 {
+  #buyer-review-product-details h6 {
     width: 200px;
   }
 }
 
 @media screen and (max-width: 359px) {
-  #buyer-review-product-name h6 {
+  #buyer-review-product-details h6 {
     width: 130px;
   }
 }
